objects/Parent_Organization_Event__e.object
<CustomObject>
    <description>This channel is used to send Parent Organization updates to the organizations topic channel</description>
    <fields>
        <fullName>Account_Salesforce_Id__c</fullName>
        <description>Salesforce Id for the &quot;child&quot; account of this Platform event or the Organization Id</description>
        <label>Account Salesforce Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <description>Platform event field indicating the Organization(account external id)</description>
        <label>Organization Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Salesforce_Id__c</fullName>
        <description>The Parent salesforce Id for the &quot;child&quot; organization Id in the platform event</description>
        <label>Parent Account Salesforce Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Organization_Id__c</fullName>
        <description>The Parent Organization Id used to indicate the parent account associated with an account in Salesforce</description>
        <label>Parent Organization Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>event_type__c</fullName>
        <description>indicates the event type of the Platform Event. Either Add, update, or remove Parent Organization event</description>
        <label>event type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Parent Organization</label>
    <pluralLabel>Parent Organizations</pluralLabel>
</CustomObject>